[package]
name = "github-star-counter"
version = "1.0.6"
authors = ["Sebastian Thiel <sthiel@thoughtworks.com>"]
edition = "2018"
repository = "https://github.com/Byron/github-star-counter"
readme = "README.md"
exclude = ["/test/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "count-github-stars"
path = "src/main/mod.rs"

[dependencies]
# lib
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.40"
itertools = "0.8.0"
futures-preview = { version = "=0.3.0-alpha.18", features = ["async-await", "nightly"] }
#tokio = { git = "https://github.com/tokio-rs/tokio", version = "0.2.0-alpha.1", rev = "8d55f98f6fbd6cda5093f0ace9eb31e6c06f3e8d" }
tokio = "0.2.0-alpha.1"
base64 = "0.10.1"
log = "0.4.8"
lazy_static = "1.3.0"

# TODO Want request with await support, instead of hyper!
hyper = { git = "https://github.com/hyperium/hyper", version = "0.13.0-a.0", rev = "a503f8b3369ff24ce39ccf1a1da0d1d56366dabb" }
hyper-tls = { git = "https://github.com/hyperium/hyper-tls", version = "0.3.2", rev = "4b9ed650add2471e04de90bb888146f89468dd08" }

# main
structopt = "0.2.18"
simple_logger = "1.3.0"
bytesize = "1.0.0"

# [patch."https://github.com/hyperium/hyper"]
# hyper = { git = "https://github.com/Byron/hyper" }

[patch.crates-io]
tokio = { git = "https://github.com/tokio-rs/tokio", rev = "8d55f98f6fbd6cda5093f0ace9eb31e6c06f3e8d" }
tokio-io = { git = "https://github.com/tokio-rs/tokio", rev = "8d55f98f6fbd6cda5093f0ace9eb31e6c06f3e8d" }
tokio-reactor = { git = "https://github.com/tokio-rs/tokio", rev = "8d55f98f6fbd6cda5093f0ace9eb31e6c06f3e8d" }
tokio-sync = { git = "https://github.com/tokio-rs/tokio", rev = "8d55f98f6fbd6cda5093f0ace9eb31e6c06f3e8d" }
tokio-tcp = { git = "https://github.com/tokio-rs/tokio", rev = "8d55f98f6fbd6cda5093f0ace9eb31e6c06f3e8d" }
tokio-threadpool = { git = "https://github.com/tokio-rs/tokio", rev = "8d55f98f6fbd6cda5093f0ace9eb31e6c06f3e8d" }
tokio-timer = { git = "https://github.com/tokio-rs/tokio", rev = "8d55f98f6fbd6cda5093f0ace9eb31e6c06f3e8d" }

[dev-dependencies]
pretty_assertions = "0.6.1"
