[package]
name = "github-star-counter"
version = "1.0.7"
authors = ["Sebastian Thiel <sthiel@thoughtworks.com>"]
edition = "2018"
repository = "https://github.com/Byron/github-star-counter"
description = "A tool to query direct (and indirect) stars of a GitHub user or organizations"
categories = ["command-line-utilities"]
readme = "README.md"
license = "MIT"
exclude = ["/test/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "count-github-stars"
path = "src/main/mod.rs"

[dependencies]
# lib
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.40"
itertools = "0.8.0"
futures-preview = { version = "=0.3.0-alpha.18", features = ["async-await", "nightly"] }
tokio = "0.2.0-alpha.1"
base64 = "0.10.1"
lazy_static = "1.3.0"
log = "0.4.8"
surf = "1.0.2"

# main
structopt = "0.3.0"
bytesize = "1.0.0"
simple_logger = "1.3.0"
tera = "0.11.20"

[dev-dependencies]
pretty_assertions = "0.6.1"
