[package]
name = "github-star-counter"
version = "1.1.4"
authors = ["Sebastian Thiel <sthiel@thoughtworks.com>"]
edition = "2018"
repository = "https://github.com/Byron/github-star-counter"
description = "A tool to query direct (and indirect) stars of a GitHub user or organizations"
categories = ["command-line-utilities"]
readme = "README.md"
license = "MIT"
include = ["src/**/*", "LICENSE.md", "README.md", "CHANGELOG.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "count-github-stars"
path = "src/main/mod.rs"

[dependencies]
# lib
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.40"
itertools = "0.9.0"
futures-preview = { version = "=0.3.0-alpha.19", features = ["async-await"] }
tokio = { version = "0.2.1", features = ["full"] }
base64 = "0.12"
lazy_static = "1.3.0"
log = "0.4.8"
surf = "1.0"

# main
structopt = "0.3.0"
bytesize = "1.0.0"
simple_logger = "1.3.0"
tera = "1.0.2"

[dev-dependencies]
pretty_assertions = "0.6.1"

[profile.release]
overflow-checks = false
lto = "thin"
panic = 'abort'
codegen-units = 1
incremental = false
build-override = { opt-level = 0 }
